--- a/style.css
+++ b/style.css
@@ -20,9 +20,11 @@ body{
 .banner-info h1{
         font-size: 30px;
         font-weight: 500;
+        
 }
 .banner-info{
     margin: 30px 60px;
+    width: 50%;
 }
 .banner-info button{
     background-color: #ee4a73;
@@ -31,6 +33,9 @@ body{
     color: #fff;
     
 
+}
+.banner-img{
+    width: 50%;
 }
 .banner-img img{
     max-height: 80%;
@@ -41,6 +46,11 @@ body{
 ----product section---- */
 .product-section{
     margin-top: 20px;
+}
+.product-section h1{
+        text-align: center;
+        font-size: 30px;
+        font-weight: 400;
 }
 
 .products{
@@ -78,11 +88,42 @@ body{
 }
 .see-more a{
     width: 100%;
-    text-align: end;
+    text-align: right;
     color: #ee4a73;
     font-size: 25px;
     text-decoration: none;
+   
 }
+.see-more p{
+    margin-right: 143px;
+}
+/* --------------
+----fun-section---- */
+.fun{
+    max-width: 40%;
+    margin-left: 60px;
+
+}
+.common-btn{
+    background-color: #ee4a73;
+    padding: 18px;
+    border-radius: 15px;
+    color: #fff;
+}
+.fun h1{
+    font-size: 30px;
+    font-weight: 400;
+}
+.fun p{
+    font-size: 16px;
+}
+.fun-img img{
+    max-height: 80%;
+    max-width: 80%;
+    border-radius: 10px;
+    margin-left: 20px;
+}
+
 /* --------------
 ----footer section---- */
 .footer{
