--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 .heading{
     margin: 60px 60px;
     font-weight: 300;
+    color:#ee4a73 ;
 
     
 }
@@ -20,6 +21,7 @@ body{
 .banner-info h1{
         font-size: 30px;
         font-weight: 500;
+       
         
 }
 .banner-info{
@@ -90,7 +92,7 @@ body{
     width: 100%;
     text-align: right;
     color: #ee4a73;
-    font-size: 25px;
+    font-size: 20px;
     text-decoration: none;
    
 }
@@ -98,8 +100,8 @@ body{
     margin-right: 143px;
 }
 /* --------------
-----fun-section---- */
-.fun{
+----Add-section---- */
+.add{
     max-width: 40%;
     margin-left: 60px;
 
@@ -110,14 +112,14 @@ body{
     border-radius: 15px;
     color: #fff;
 }
-.fun h1{
+.add h1{
     font-size: 30px;
     font-weight: 400;
 }
-.fun p{
-    font-size: 16px;
+.add p{
+    font-size: 14px;
 }
-.fun-img img{
+.add-img img{
     max-height: 80%;
     max-width: 80%;
     border-radius: 10px;
